Blog UI fix on mobile view

--- a/styles/index.css
+++ b/styles/index.css
@@ -100,6 +100,13 @@ article {
     margin-right: 0;
     margin-top: 0.2rem;
   }
+  .columns {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  .columns .column {
+    display: block;
+  }
 }
 
 .tab h1 {
@@ -129,6 +136,7 @@ a {
 .container {
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
   flex-grow: 1;
 }
 .columns {
@@ -138,8 +146,9 @@ a {
 .notification {
   border-radius: 10px;
   background-color: #203120;
+  width: 100%;
   padding: 1rem;
-  margin: 1rem 0;
+  margin: 1rem -1rem;
 }
 .content {
   display: block;
